crates/data-dict/tests/snapshots/validate_spec__s05_conflicts_not_on_both_sides.snap
---
source: crates/data-dict/tests/validate_spec.rs
assertion_line: 307
expression: "failing_diagnostic(\"spec/s05-conflicts-not-on-both-sides.yaml\")"
---
Error: [S07]
    ╭─[ spec/s05-conflicts-not-on-both-sides.yaml:12:15 ]
    │
 12 │       - name: id
    │               ─┬  
    │                ╰── column `food.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ spec/s05-conflicts-not-on-both-sides.yaml:20:15 ]
    │
 20 │       - name: id
    │               ─┬  
    │                ╰── column `food_nutrient.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ spec/s05-conflicts-not-on-both-sides.yaml:23:15 ]
    │
 23 │       - name: food_id
    │               ───┬───  
    │                  ╰───── column `food_nutrient.food_id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ spec/s05-conflicts-not-on-both-sides.yaml:26:15 ]
    │
 26 │       - name: amount
    │               ───┬──  
    │                  ╰──── column `food_nutrient.amount` has type `number(quantity)` but is missing the expected `range` property
────╯

Error: [S05]
    ╭─[ spec/s05-conflicts-not-on-both-sides.yaml:32:17 ]
    │
 32 │     conflicts: [amount]
    │                 ───┬──  
    │                    ╰──── `conflicts` entry `amount` is not a column of `food`
────╯
