crates/data-dict/tests/snapshots/validate_spec__s07_wrong_rep_on_enum.snap
---
source: crates/data-dict/tests/validate_spec.rs
assertion_line: 360
expression: "failing_diagnostic(\"spec/s07-wrong-rep-on-enum.yaml\")"
---
Error: [S07]
    ╭─[ spec/s07-wrong-rep-on-enum.yaml:10:15 ]
    │
 10 │       - name: status
    │               ───┬──  
    │                  ╰──── column `t.status` has type `enum` but is missing the required `values` property
────╯

Error: [S07]
    ╭─[ spec/s07-wrong-rep-on-enum.yaml:10:15 ]
    │
 10 │       - name: status
    │               ───┬──  
    │                  ╰──── column `t.status` has type `enum` but uses `range`; enum columns represent their data with `values`
────╯
