crates/data-dict/tests/snapshots/validate_spec__s13_descending_range.snap
---
source: crates/data-dict/tests/validate_spec.rs
assertion_line: 475
expression: "failing_diagnostic(\"spec/s13-descending-range.yaml\")"
---
Error: [S13]
    ╭─[ spec/s13-descending-range.yaml:14:17 ]
    │
 14 │         range: [100, 10]
    │                 ─┬─  
    │                  ╰─── column `t.mass` has an invalid range: minimum `100` is greater than maximum `10`
────╯
